[package]
name = "pq-msg"
version = "0.1.0"
edition = "2024"
description = "Rust crate for higher-level implementations of post-quantum messaging."
license = "MIT or Apache-2.0"
authors = ["OnlyF0uR"]
homepage = "https://github.com/OnlyF0uR/pq-msg"
repository = "https://github.com/OnlyF0uR/pq-msg"
readme = "README.md"

[dependencies]
pqcrypto-falcon = "0.4.0"
pqcrypto-mlkem = "0.1.0"
pqcrypto-traits = "0.3.5"
chacha20poly1305 = "0.10.1"
crypto-common = "0.1.6"
